refactor: add words to paragraph in header

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ html{
 /*Header*/
 
 header{
-    background-color: rgba(231, 231, 226, 0.902);
+    background-color: rgba(226, 230, 231, 0.902);
     height: 300px;
 }
 
@@ -24,7 +24,11 @@ header h1 {
     color: rgb(234, 230, 230);
     height: 50px;
     position: relative;
-    bottom: 55px;
+    bottom: 63px;
+    font-size: 1.5rem;
+    padding-top: 8px;
+    padding-left: 8px;
+    text-transform: uppercase;
 }
 
 header h2 {
