--- a/style.css
+++ b/style.css
@@ -14,6 +14,24 @@ html{
     background-color: rgba(236, 236, 236, 0.781);
 }
 
+.fixedButton{
+    text-align: right;
+    position: relative;
+    top: 500px;
+}
+.fixedButton img{
+    width: 40px;
+}
+
+.fixedButton a{
+    position: fixed;
+}
+
+
+.up-sign:hover{
+    transform: scale(1.2);
+} 
+
 /*Header*/
 
 header{
@@ -59,6 +77,7 @@ header img{
 
 /*Navigation*/
 nav ul{
+    margin-top: 15px;
     list-style: none;
     text-align: center;
 }
@@ -75,7 +94,8 @@ nav ul > li > a {
 }
 
 nav ul > li > a:hover {
-    background-color: black;
+    border-radius: 10px;
+    background-color: rgba(0, 0, 0, 0.685);
     color: white;
     text-decoration: none;
     transform: scale(1.2);
@@ -107,6 +127,11 @@ nav ul > li > a:hover {
     height: 80%;
     box-shadow: 10px 10px 20px 2px gray;
     border: 1px solid rgba(128, 128, 128, 0.342);
+    margin-bottom: 10px;
+}
+
+.section-container h2{
+    margin-top: 5px;
 }
 
 
@@ -169,6 +194,68 @@ li.skills .bar{
     background-color: rgb(82, 158, 133);
 }
 
+/*Experience section*/
+
+ul.experience-list{
+    margin-top: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    margin-bottom: 20px;
+    gap: 5px 5px;
+    justify-content: center;
+}
+
+.work{
+    border: 1px solid black;
+    padding: 10px;
+    box-sizing: border-box;
+    max-width: 300px;
+    border-radius: 5px;
+}
+p.work-period{
+    text-align: right;
+    font-size: 0.7rem;
+}
+
+.work span{
+    font-weight: normal;
+    font-size: 0.8rem;
+}
+p.position, p.industry{
+    font-weight: bold;
+    color: black;
+}
+
+
+p.duty{
+    font-size: 0.8rem;
+   margin-top: 10px;
+}
+
+ul.duty-list{
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 5px;
+    column-gap: 5px;
+    align-items: center;
+}
+
+.duty-list li{
+    background-color: black;
+    color: white;
+    padding: 5px;
+    border-radius: 5px;
+    font-size: 0.6rem;
+}
+.work .link {
+    margin-top: 5px;
+}
+
+.work p a {
+    color: black;
+}
 
 
 
