--- a/style.css
+++ b/style.css
@@ -267,7 +267,7 @@ ul.duty-list{
     color: black;
 }
 
-/*Portfolio*/
+/*Portfolio section*/
 
 ul.portfolio-list {
     list-style: none;
@@ -303,6 +303,63 @@ ul.portfolio-list {
     transition-timing-function: ease-out;
 }
 
+/*Education section*/
+
+ul.education-list{
+    margin: 10px 0 20px 20px;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    row-gap: 15px;
+}
+
+.education h3{
+    color: rgb(126, 122, 122);
+    margin-bottom: 5px;
+}
+
+.name {
+    display: flex;
+    align-items: center;
+    column-gap: 10px;
+}
+
+.name img{
+    display: block;
+    width: 40px;
+}
+
+.name > p, .name ~ p{
+    font-weight: bold;
+}
+
+.education p span {
+    font-size: 0.8rem;
+    font-weight: normal;
+}
+
+ul.courses-list {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px 100px;
+
+}
+
+ul.courses-list li{
+    width: 350px;
+}
+
+/*Code example*/
+pre{
+    background-color: black;
+}
+code{
+    color: white;
+}
 
 
-
+/*Footer*/
+footer{
+    background-color: black;
+}
