--- a/style.css
+++ b/style.css
@@ -427,7 +427,9 @@ footer{
    color: rgb(66, 161, 238);;
 }
 
-footer div p.last-note{
+.rs-school{
+    display: flex;
+    justify-content: center;
     border-top: 1px solid white;
     width: 80%;
     margin: 0 auto;
@@ -435,3 +437,25 @@ footer div p.last-note{
     font-size: 0.7rem;
     padding: 10px;
 }
+
+.rs-school a{
+    display: flex;
+    column-gap: 10px;
+    color: white;
+    text-decoration: none;
+    align-items: center;
+}
+
+.rs-school img {
+    width: 30px;
+    height: 30px;
+    background-color: white;
+    border-radius: 5px;
+}
+
+.rs-school a:hover {
+    color: rgb(66, 161, 238);
+    ;
+}
+
+
